@@ -168,3 +168,5 @@
        (eq_attr "type" "store")
        (not (match_operand:DI 0 "" "")))
   "issue+dmp_write_port")
+
+(define_bypass 3 "data_store" "data_load" "arc_store_addr_hazard_p")
