@@ -1,3 +1,7 @@
+2016-11-17  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gcc.target/arc/arc700-stld-hazard.c: New file.
+
 2016-11-30  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/78592
